*SVN*

* Allow subclassed resources to share the site info [Rick, Jeremy Kemper]

    class BeastResource < ActiveResource::Base
      self.site = 'http://beast.caboo.se'
    end

    class Forum < BeastResource
      # taken from BeastResource
      # self.site = 'http://beast.caboo.se'
    end

    class Topic < BeastResource
      self.site += '/forums/:forum_id'
    end

* Fix issues with ActiveResource collection handling.  Closes #6291. [bmilekic]

* Use attr_accessor_with_default to dry up attribute initialization. References #6538. [Stuart Halloway]

* Add basic logging support for logging outgoing requests. [Jamis Buck]

* Add Base.delete for deleting resources without having to instantiate them first. [Jamis Buck]

* Make #save behavior mimic AR::Base#save (true on success, false on failure). [Jamis Buck]

* Add Basic HTTP Authentication to ActiveResource (closes #6305). [jonathan]

* Extracted #id_from_response as an entry point for customizing how a created resource gets its own ID.
  By default, it extracts from the Location response header.

* Optimistic locking: raise ActiveResource::ResourceConflict on 409 Conflict response. [Jeremy Kemper]

    # Example controller action
    def update
      @person.save!
    rescue ActiveRecord::StaleObjectError
      render :xml => @person.reload.to_xml, :status => '409 Conflict'
    end

* Basic validation support [Rick Olson]

  Parses the xml response of ActiveRecord::Errors#to_xml with a similar interface to ActiveRecord::Errors.  
  
    render :xml => @person.errors.to_xml, :status => '400 Validation Error'

* Deep hashes are converted into collections of resources.  [Jeremy Kemper]
    Person.new :name => 'Bob',
               :address => { :id => 1, :city => 'Portland' },
               :contacts => [{ :id => 1 }, { :id => 2 }]
  Looks for Address and Contact resources and creates them if unavailable.
  So clients can fetch a complex resource in a single request if you e.g.